fix vertical-fill spacing

--- a/ui/less/com/msg-list.less
+++ b/ui/less/com/msg-list.less
@@ -8,3 +8,6 @@
 .msg-list-items {
   flex: 0 0 300px;
 }
+.msg-list-view {
+  overflow: auto;
+}
