--- a/ui/less/layout.less
+++ b/ui/less/layout.less
@@ -1,5 +1,8 @@
 // Basic Types
 
+html, body {
+  height: 100%;
+}
 .layout-rows {
   display: flex;
   flex-direction: column;
@@ -15,6 +18,7 @@
 }
 #leftnav {
   flex: 0 0 150px;
+  overflow: auto;
 }
 #mainview {
   flex: 1;
